# volgograd_reservoir

./: .gitignore  240716 БРОВКИ Баранова.xls  AGENTS.md  Makefile  README.md  README_data.md  pyproject.toml  Задание Коновалов.docx  Камышин скорость и направление ветра.xlsx  Скорость отступания метров в год.xlsx
archive/unknown/: Разработка ПО для анализа абразии берегов Волгоградского водохранилища.pptx
data/delivery/: README_delivery.md  analysis_ready_delivery.csv  analysis_safe_subset_delivery.csv  base_points_delivery.csv  data_dictionary_delivery.csv  final_dataset_for_modeling_delivery.csv  interval_metrics_delivery.csv  profiles_delivery.csv  shoreline_observations_delivery.csv  sites_delivery.csv
data/interim/: base_points_manual_template.csv  base_points_manual_template_README.md  final_dataset_enriched_open_sources_validation.json  qc_summary.json  site_scope_review.csv  (+6 more)
notebooks/: 01_quick_validation.ipynb  02_periods_and_profile_correlation.ipynb  03_baseline_modeling.ipynb  04_autoencoder_anomaly_detection.ipynb
po/: 240716 БРОВКИ Баранова.xls  74FFE100  8E57F900  D4074200  Prognoz_profili_otdelno.ipynb  corr_inp.py  prognoz.py  БРОВКИ.xls  Бровки.xlsx  Бровки_now.xlsx  Ориентация берега участки.xlsx  литология_vs_отступание.xlsx  результаты_корреляции.xlsx  результаты_корреляции_и_литология.xlsx
src/: __init__.py  pipeline.py  qc_messages.py
tests/: test_analysis_outputs.py  test_build_interval_metrics.py  test_delivery_exports.py  test_enriched_dataset_builder.py  test_utils.py
Статья/: Аннотация и Введение.docx  Результаты и обсуждение.docx
(+170 files in other folders)
